# argus

./: .env.example  .gitignore  DEPLOY.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
app/api/ingest/events/: route.ts
app/api/livekit/webhook/: route.ts
app/api/sessions/: route.ts
app/api/settings/: route.ts
app/auth/callback/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/dashboard/functions/: page.tsx
app/dashboard/integrations/: IntegrationsClient.tsx  page.tsx
app/login/: page.tsx
components/: AppShell.tsx  Breadcrumbs.tsx  DashboardStrip.tsx  KeyboardShortcuts.tsx  LiveIndicator.tsx  NotesPanel.tsx  SessionView.tsx  SessionsFilter.tsx  SessionsTable.tsx  SignOutButton.tsx  ThemeToggle.tsx  TranscriptSearch.tsx  UsageStrip.tsx  breadcrumb-context.tsx
lib/: auth.ts  cost.ts  data.ts  db.ts  env.ts  format.ts  ingest.ts  livekit.ts  queue.ts  schema.ts  supabase-browser.ts  supabase-server.ts
scripts/: apply-migrations.mjs  backfill-embeddings.mjs  deploy-function.sh  deploy-via-api.sh
sdk-python/: pyproject.toml
sdk-python/interview_observer/: __init__.py  observer.py
supabase/: config.toml
supabase/functions/analyze/: index.ts
supabase/functions/purge/: index.ts
supabase/migrations/: 0001_init.sql  0002_schedule_analysis.sql  0003_auth_profiles.sql  0004_event_driven_analysis.sql  0005_lock_rls.sql  0006_settings.sql  0007_annotations.sql  0008_review_status.sql  0009_pgvector.sql  0010_realtime.sql  0011_retention.sql
(+7 files in other folders)
